<resources>
    <string name="app_name">NUMAD20S-RouniYin</string>
    <string name="action_settings">Settings</string>
    <string name="convert_string">Convert to Euros</string>
    <string name="dollars_hint">dollars</string>
    <string name="no_value_string">No Value</string>
    <string name="about">About</string>
    <string name="info">Name: Rouni Yin\nEmail: yin.ro@husky.neu.edu</string>
    <string name="link_collector">Link Collector</string>
    <string name="title_activity_link_collector">Link Collector</string>
    <string name="url">URL (e.g. https://www.google.com)</string>
    <string name="name">Name</string>
    <string name="find_prime">Find Prime</string>
    <string name="stop">Stop</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="watch_time">Watch Time</string>
    <string name="get_location">Get Location</string>
    <string name="link_id">Link ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="link_url">URL</string>
    <string name="e_g_https_www_google_com">(e.g. https://www.google.com)</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="link_collector_i">Link Collector I</string>
    <string name="link_collector_ii">Link Collector II</string>
</resources>
